# radio-arduino

./: .clang-format  .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst
arduino/: CMakeLists.txt  conanfile.py
arduino/cmake/: avr-macros.cmake  avr-vars.cmake
arduino/include/: CMakeLists.txt  version.h.in
arduino/libs/: CMakeLists.txt
arduino/libs/adc/: CMakeLists.txt  adc.cpp  command-handlers-adc.cpp
arduino/libs/adc/include/: adc.hpp  (+1 more)
arduino/libs/aes/: CMakeLists.txt  aes.cpp
arduino/libs/com-bus/: CMakeLists.txt
arduino/libs/com_bus/: CMakeLists.txt
arduino/libs/command-handlers/: CMakeLists.txt  command-handlers.cpp
arduino/libs/ds18b20/: CMakeLists.txt  ds18b20.c  onewire.c  romsearch.c
arduino/libs/eeprom/: CMakeLists.txt  command-handlers-eeprom.cpp  eeprom.cpp
arduino/libs/gpio/: CMakeLists.txt  command-handlers-gpio.cpp  gpio.cpp
arduino/libs/i2c/: CMakeLists.txt
arduino/libs/ina219/: CMakeLists.txt  command-handlers-ina219.cpp  ina219.cpp
arduino/libs/lsm303d/: CMakeLists.txt  command-handlers-lsm303d.cpp  lsm303d.cpp
arduino/libs/nrf24l01/: CMakeLists.txt  command-handlers-nrf24l01.cpp  nrf24l01.cpp
arduino/libs/parser/: CMakeLists.txt  command-handlers-parser.cpp  parser.cpp
arduino/libs/protocol/: CMakeLists.txt  arduinoCryptoHandler.cpp  protocol.cpp
arduino/libs/pwm/: CMakeLists.txt  command-handlers-pwm.cpp  pwm.cpp
arduino/libs/quadencoder/: CMakeLists.txt  command-handlers-quadencoder.cpp  quadencoder.cpp
arduino/libs/radio-link/: CMakeLists.txt  command-handlers-radio-link.cpp  radio-link.cpp
arduino/libs/radio-uart/: CMakeLists.txt  command-handlers-radio-uart.cpp  radioUart.cpp
arduino/libs/radio_link/: CMakeLists.txt  radio_link.cpp
arduino/libs/radio_uart/: CMakeLists.txt  radioUart.cpp  radio_uart.cpp
arduino/libs/random/: CMakeLists.txt  command-handlers-random.cpp  random.cpp
arduino/libs/rsa/: readme.txt
arduino/libs/sha1/: CMakeLists.txt
arduino/libs/sleep/: CMakeLists.txt  command-handlers-sleep.cpp  sleep.cpp
arduino/libs/spi/: CMakeLists.txt  command-handlers-spi.cpp  spi.cpp
arduino/libs/ssd1306/: CMakeLists.txt  SSD1306.cpp
arduino/libs/timer/: CMakeLists.txt  command-handlers-timer.cpp  timer.cpp
arduino/libs/uart/: CMakeLists.txt  uart.cpp
arduino/libs/watchdog/: CMakeLists.txt  command-handlers-watchdog.cpp  watchdog.cpp
arduino/libs/ws2812b/: CMakeLists.txt  ws2812b.cpp
arduino/src/: CMakeLists.txt  main.cpp
arduino/third_party_libs/: CMakeLists.txt
arduino/third_party_libs/aes/: CMakeLists.txt  README.md  aes.cpp  command-handlers-aes.cpp
arduino/third_party_libs/ds18b20/: CMakeLists.txt  README.md  command-handlers-ds18b20.cpp  credits.txt
arduino/third_party_libs/i2c/: CMakeLists.txt  README.md  command-handlers-i2c.cpp  i2c.cpp
arduino/third_party_libs/sha1/: CMakeLists.txt  README.md  command-handlers-sha1.cpp  sha1.cpp
arduino/third_party_libs/ssd1306/: CMakeLists.txt  Framebuffer.cpp  README.md  SSD1306.cpp  command-handlers-ssd1306.cpp
arduino/third_party_libs/ws2812b/: CMakeLists.txt  README.md  command-handlers-ws2812b.cpp  ws2812b.cpp
linux/: .gitignore  CMakeLists.txt  conanfile.py
linux/apps/: CMakeLists.txt
linux/apps/device-atmega328/: CMakeLists.txt  main.cpp
linux/apps/device-ds28b20/: CMakeLists.txt  main.cpp
linux/apps/device-ina219/: CMakeLists.txt  main.cpp
linux/apps/device-lsm303d/: CMakeLists.txt  main.cpp
linux/apps/device-nrf24l01/: CMakeLists.txt  main.cpp
linux/apps/device-ssd1306/: CMakeLists.txt  main.cpp
linux/apps/device-ws2812b/: CMakeLists.txt  main.cpp
linux/apps/gateway/: CMakeLists.txt  main.cpp
linux/apps/generic/: CMakeLists.txt  main.cpp
linux/apps/i2c-bridge/: CMakeLists.txt  main.cpp
linux/apps/mqtt/: CMakeLists.txt  actualState.cpp  actualState.hpp  currentMonitor.hpp  desiredState.cpp  desiredStateCallback.cpp  desiredStateCallback.hpp  desiredStateConfiguration.cpp  desiredStateConfiguration.hpp  deviceController.cpp  digitalTwin.cpp  digitalTwin.hpp  main.cpp  mqtt-common.cpp  mqtt_common.cpp  mqtt_common.hpp  radioSession.cpp  radioSession.hpp
linux/apps/mqtt-adapter/: CMakeLists.txt  commandCallback.cpp  deviceController.cpp  main.cpp
linux/apps/mqtt-bridge/: CMakeLists.txt  commandCallback.cpp  desiredState.cpp  deviceController.cpp  main.cpp
linux/apps/mqtt-client/: deviceController.cpp  mqtt-common.cpp
linux/apps/mqtt-proxy/: CMakeLists.txt  commandCallback.cpp  main.cpp
linux/apps/mqtt-test/: CMakeLists.txt  main.cpp
linux/apps/node/: CMakeLists.txt  main.cpp
linux/apps/personalize/: CMakeLists.txt  main.cpp
linux/apps/power/: CMakeLists.txt  currentMonitor.cpp  currentMonitor.hpp  main.cpp  mqtt-common.cpp  mqtt-common.hpp  mqtt_common.cpp  mqtt_common.hpp
linux/apps/power-monitor/: main.cpp
linux/apps/power-monitor-mqtt/: CMakeLists.txt  currentMonitor.cpp  main.cpp  mqtt-common.cpp
linux/apps/rf/: CMakeLists.txt  main.cpp
linux/apps/rf-scan/: CMakeLists.txt  main.cpp
linux/apps/serial-bridge/: CMakeLists.txt  main.cpp
linux/apps/servo/: CMakeLists.txt  main.cpp
linux/apps/spi-bridge/: CMakeLists.txt  main.cpp
linux/apps/system-commands/: CMakeLists.txt  main.cpp
linux/apps/test/: CMakeLists.txt  main.cpp
linux/include/: CMakeLists.txt  json_schema.h.in
linux/libs/: CMakeLists.txt
linux/libs/crypto/: CMakeLists.txt  crypto.cpp
linux/libs/epollevent/: CMakeLists.txt  epollevent.cpp
linux/libs/eventprocess/: CMakeLists.txt  eventprocess.cpp
linux/libs/monitor/: CMakeLists.txt  monitor.cpp
linux/libs/protocol/: CMakeLists.txt  linuxCryptoHandler.cpp  protocol.cpp
linux/libs/radiosession/: CMakeLists.txt  radioSession.cpp
linux/libs/uart/: CMakeLists.txt  uart.cpp
linux/schema/: adapter.schema.json
linux/services/: CMakeLists.txt
linux/services/cluster-controller/: CMakeLists.txt  commandCallback.cpp  main.cpp
linux/services/mqtt-proxy/: CMakeLists.txt  commandCallback.cpp  main.cpp
linux/services/mqtt-router/: commandCallback.cpp  main.cpp
linux/services/mqtt-subscriptions/: CMakeLists.txt  commandCallback.cpp  main.cpp
(+668 files in other folders)
