
add_subdirectory(com_bus)
add_subdirectory(uart)
add_subdirectory(gpio)
add_subdirectory(sha1)
add_subdirectory(eeprom)
add_subdirectory(aes)
add_subdirectory(adc)
add_subdirectory(protocol)
add_subdirectory(pwm)
add_subdirectory(i2c)
add_subdirectory(ds18b20)
add_subdirectory(ws2812b)
add_subdirectory(ssd1306)
add_subdirectory(random)
add_subdirectory(spi)
add_subdirectory(nrf24l01)
add_subdirectory(radio_uart)
add_subdirectory(sleep)
add_subdirectory(parser)
