
add_subdirectory(com-bus)
add_subdirectory(uart)
add_subdirectory(gpio)
add_subdirectory(eeprom)
add_subdirectory(adc)
add_subdirectory(protocol)
add_subdirectory(pwm)
add_subdirectory(random)
add_subdirectory(spi)
add_subdirectory(nrf24l01)
add_subdirectory(quadencoder)
add_subdirectory(radio-uart)
add_subdirectory(sleep)
add_subdirectory(parser)
add_subdirectory(ina219)
add_subdirectory(lsm303d)
add_subdirectory(timer)
add_subdirectory(radio-link)
add_subdirectory(watchdog)
add_subdirectory(command-handlers)
