
add_subdirectory(mqtt)
add_subdirectory(mqtt-bridge)
add_subdirectory(mqtt-proxy)
add_subdirectory(power-monitor-mqtt)
add_subdirectory(node)
add_subdirectory(test)
add_subdirectory(gateway)
add_subdirectory(i2c-bridge)
add_subdirectory(spi-bridge)
add_subdirectory(personalize)
add_subdirectory(device-nrf24l01)
add_subdirectory(device-ds28b20)
add_subdirectory(device-ina219)
add_subdirectory(device-ws2812b)
add_subdirectory(device-ssd1306)
add_subdirectory(device-atmega328)
add_subdirectory(device-lsm303d)
add_subdirectory(system-commands)
